# controllers/combined-record-controller.js
@@ -7,14 +7,14 @@ const verifyService = require('../services/zip-code-verify-service');
 
 const postRecord = async (req, res, next) => {
     
-    if (!(req.body && req.body.uid && req.body.email && req.body.phone && req.body.zip_code)) {
+    if (!(req.body && req.body.uid && req.body.email && req.body.phone_number && req.body.zip_code)) {
         res.status(400).json({message: "Request body is missing or invalid request format"});
         return;
     }
 
     let uid = req.body.uid;
     let email = req.body.email;
-    let phone_number = req.body.phone;
+    let phone_number = req.body.phone_number;
     let zip_code = req.body.zip_code;
 
     verifyService.verifyZipCode(zip_code)
